--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
-          wait-on: http://localhost:5000
+          wait-on: http://localhost:5000 
   heroku_deploy:
     runs-on: ubuntu-20.04
     steps:
@@ -36,3 +36,4 @@ jobs:
           heroku_email: "jmogavero2@gmail.com"
           healthcheck: "https://jam-pokedex.herokuapp.com/health"
 
+#added to add PR
